--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-select": "^5.4.0",
     "react-select-search": "^3.0.10",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
     "sweetalert2": "^11.4.24",
     "web-vitals": "^2.1.4"
   },
